# spagedi

./: .gitignore  CMakeLists.txt  README.md  copy_version.cmake  copying.txt  install_manifest.txt  new_package_source.cmake  postflight.sh.in  readme.txt  version.cmake
Modules/: copy_version.cmake  install_glue.cmake  new_install.cmake  new_package.cmake  new_package_source.cmake  version.cmake
data/: DataAFLP(estimation_of_marker_heritability).txt  DataAFLP(kinship_estimation_corrected_by_heritability).txt
example_data/: CMakeLists.txt  DataAFLP-estimation_of_marker_heritability.txt  DataAFLP-kinship_estimation_corrected_by_heritability.txt  DataAllozymes-diploids_and_tetraploids.txt  DataHaplo-with_distance_matrix_between_haplotypes.txt  DataSSR(with_spatial_distance_matrix).txt  DataSSR-fine_scale_spatial_structure.txt  DataSSR-with_spatial_distance_matrix.txt
examples/: CMakeLists.txt  data1.txt  data2.txt  data3.txt
releng/: build-rel-osx.sh  build-rel-unix.sh  build-rel-win.bat  i586-mingw32msvc.cmake  mingw32.cmake  releng.cmake
src/: Autoccomp.c  Autoccomp.h  Autocio.c  Autocio.h  CMakeLists.txt  SPAGeDi.desktop  Xatools.c  Xatools.h  compat.c  compat.h  config.h.cmake  main.c  package.h  spagedi.rc  spagedi.xcf  spagedi_version.h.in  version.h.in
