INSTALL(FILES
	DataAFLP-estimation_of_marker_heritability.txt
	DataAFLP-kinship_estimation_corrected_by_heritability.txt
	DataAllozymes-diploids_and_tetraploids.txt
	DataHaplo-with_distance_matrix_between_haplotypes.txt
	DataSSR-fine_scale_spatial_structure.txt
	DataSSR-with_spatial_distance_matrix.txt

DESTINATION "${CMAKE_DATA_DIR}/example_data")

