INSTALL(FILES
    DataHaplo-with_distance_matrix_between_haplotypes.txt
    DataAFLP-estimation_of_marker_heritability.txt
    DataSSR-fine_scale_spatial_structure.txt
    DataAFLP-kinship_estimation_corrected_by_heritability.txt
    DataSSR-with_spatial_distance_matrix.txt
    DataAllozymes-diploids_and_tetraploids.txt
DESTINATION "${CMAKE_DATA_DIR}/example_data")

