INCLUDE(CheckIncludeFile)
INCLUDE(CheckFunctionExists)
INCLUDE(CheckLibraryExists)

ADD_DEFINITIONS(-DHAVE_CONFIG_H -DHAVE_VERSION_H)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wno-unused-variable")

CHECK_INCLUDE_FILE("unistd.h" HAVE_UNISTD_H)
CHECK_INCLUDE_FILE("libgen.h" HAVE_LIBGEN_H)
CHECK_FUNCTION_EXISTS("strlcpy" HAVE_STRLCPY)
CHECK_FUNCTION_EXISTS("strlcat" HAVE_STRLCAT)
CHECK_FUNCTION_EXISTS("basename" HAVE_BASENAME)
CHECK_FUNCTION_EXISTS("dirname" HAVE_DIRNAME)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)
INCLUDE_DIRECTORIES(BEFORE "${CMAKE_CURRENT_BINARY_DIR}")

ADD_EXECUTABLE(spagedi ${SPAGEDI_MACOSX_BUNDLE}
  main.c Autoccomp.c Autoccomp.h Xatools.c Xatools.h Autocio.c Autocio.h
  compat.c compat.h
  ${CMAKE_CURRENT_BINARY_DIR}/config.h
  ${RES_SRCS})

TARGET_LINK_LIBRARIES(spagedi m)

INSTALL(TARGETS spagedi RUNTIME DESTINATION bin ${SPAGEDI_INSTALL_EXTRA_ARGS})
